--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "antd": "3.9.3",
     "axios": "0.18.0",
     "jquery": "3.2.1",
-    "lodash": "4.17.4",
+    "lodash": "4.17.11",
+    "lodash.clonedeep": "4.17.11",
     "moment": "2.20.1",
     "number-precision": "1.2.0",
     "react": "16.5.2",
